--- a/Examen Práctico 1 Trimestre Palomo Pino Alberto/index.html
+++ b/Examen Práctico 1 Trimestre Palomo Pino Alberto/index.html
@@ -16,7 +16,7 @@
 
     <div>
         <p id="p1">¡Feliz Navidad!</p>
-        <p id="p2">De parte de</p>
+        <p id="p2">Te desea</p>
         <p id="p3">Berto Palomo</p>
     </div>
     
