--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Postal Navideña</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <img src="./Img/imagen navidad.webp" alt="Postal">
 
     <div>
         <p id="p1">¡Feliz Navidad!</p>
-        <p id="p2">De parte de</p>
+        <p id="p2">Te desea</p>
         <p id="p3">Berto Palomo</p>
     </div>
     
